EDG-813: QA pass — fix close/reload races (lease release, post-close settle no-op, born-suspended queues), construction-failure cleanup, code quality